[tool.poetry]
name = "aio-aws"
version = "0.15.0"
description = "aio-aws"
authors = [
    "Darren Weber <dazza-codes@github.com>",
]
license = "Apache-2.0"

readme = "README.md"  # Markdown files are supported
repository = "https://github.com/dazza-codes/aio-aws.git"
homepage = "https://github.com/dazza-codes/aio-aws"

keywords = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

include = ["aio_aws/**/*"]
exclude = ["tests/**/*"]

packages = [
    {include = "aio_aws"}
]


[tool.poetry.dependencies]
python = "^3.7"

aiofiles = {version = "^0.7.0"}

# Try to update to the latest aio-botocore, a fork of
# aiobotocore with relaxed dependency versions for
# botocore and boto3
aio-botocore = {version = "~1.3.0"}

# Use AWS SDK libs compatible with current AWS lambda python runtime.
# For AWS Lambda, the latest versions are listed at:
# https://docs.aws.amazon.com/lambda/latest/dg/lambda-python.html
boto3 = "^1.17.100"
botocore = "^1.20.100"

pydantic = "^1.8.2"
PyYAML = "^5.2"
requests = "^2.23.0"
tinydb = "^3.15"

#
# Optional packages
#

awscli = {version = "^1.18", optional = true}

aioredis = {extras = ["hiredis"], version = "^2.0", optional = true}
databases = {extras = ["postgresql", "mysql", "sqlite"], version = "*", optional = true}

# Optional docs pages for readthedocs builds
Sphinx = {version = "^3.2", optional = true}
sphinx-autoapi = {version = "^1.5", optional = true}
sphinx-autodoc-typehints = {version = "^1.11", optional = true}
sphinx-rtd-theme = {version = "^0.5.0", optional = true}
ipython = {version = "^7.24.1", optional = true}

[tool.poetry.extras]

all = [
    "aioredis",
    "databases",
]

aioredis = ["aioredis"]

databases = ["databases"]

# it's generally advised that awscli is installed separately
# into a system installation rather than a venv installation,
# so it's not included in the `all` extras here
awscli = ["awscli"]

# readthedocs can use this optional dependency to build docs;
# the optional docs dependencies are also in py-dev-deps
docs = [
    "Sphinx",
    "sphinx-autoapi",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "ipython"
]

[tool.poetry.dev-dependencies]

moto = {version = "~1.3.16", extras = ["server"]}

# py-dev-deps is used as a common denominator for many
# development dependencies
py-dev-deps = "^0.2"
pytest-redis = "^2.1.1"


[tool.isort]
profile = "black"
force_single_line = true


[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
