[tool.poetry]
name = "aio-aws"
version = "0.20.0"
description = "aio-aws"
authors = [
    "Darren Weber <dazza-codes@github.com>",
]
license = "Apache-2.0"

readme = "README.md"  # Markdown files are supported
repository = "https://github.com/dazza-codes/aio-aws.git"
homepage = "https://github.com/dazza-codes/aio-aws"

keywords = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

include = ["aio_aws/**/*"]
exclude = ["tests/**/*"]

packages = [
    {include = "aio_aws"}
]


[tool.poetry.dependencies]
python = "^3.8"

# Allow s3fs/aiobotcore to bundle compatible versions of botocore, boto3, and awscli;
# see https://github.com/fsspec/s3fs/blob/main/setup.py
s3fs = {version = "^2023.0", extras = ["awscli", "boto3"]}

aiofiles = "^22.0"
pydantic = "^1.10"
PyYAML = "^5.2"
requests = "^2.0"
tinydb = "^4.0"

#
# Optional packages
#

aioredis = {extras = ["hiredis"], version = "^2.0", optional = true}
databases = {extras = ["postgresql", "mysql", "sqlite"], version = "*", optional = true}

# Optional docs pages for readthedocs builds
Sphinx = {version = "^5.0", optional = true}
sphinx-autoapi = {version = "^2.0", optional = true}
sphinx-autodoc-typehints = {version = "^1.0", optional = true}
sphinx-rtd-theme = {version = "^1.0", optional = true}
ipython = {version = "^8.0", optional = true}

[tool.poetry.extras]

all = [
    "aioredis",
    "databases",
]

aioredis = ["aioredis"]

databases = ["databases"]

# readthedocs can use this optional dependency to build docs;
# the optional docs dependencies are also in py-dev-deps
docs = [
    "Sphinx",
    "sphinx-autoapi",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "ipython"
]


[tool.poetry.group.dev.dependencies]

pytest-aiomoto = {version = "^0.6", extras = ["s3fs"]}
pytest-redis = "^2.0"

# py-dev-deps is used as a common denominator for many development dependencies
py-dev-deps = "^0.5"


[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
